[project]
authors = [{ name = "Marcelo Araujo", email = "marcelo@gnovit.com" }]
name = "fusionpbx_pilot"
version = "0.1.2"
description = "Python client LIB for FusionPBX"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.3.0",
    "certifi>=2025.1.31",
    "h11>=0.14.0",
    "idna>=3.10",
    "outcome>=1.3.0.post0",
    "pysocks>=1.7.1",
    "selenium>=4.31.0",
    "sniffio>=1.3.1",
    "sortedcontainers>=2.4.0",
    "trio>=0.29.0",
    "trio-websocket>=0.12.2",
    "typing-extensions>=4.13.1",
    "urllib3>=2.3.0",
    "wsproto>=1.2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Communications :: Telephony",
    "Development Status :: 4 - Beta",
]

keywords = [
    "fusionpbx",
    "telephony",
    "voip",
    "python",
    "client-library",
    "communication",
    "sip",
    "automation",
]
[project.urls]
Homepage = "https://github.com/gnovit/fusionpbx-pilot"
Issues = "https://github.com/gnovit/fusionpbx-pilot/issues"

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest>=8.3.5",
    "pytest-order>=1.3.0",
    "weasyprint>=65.1",
    "webdriver-manager>=4.0.2",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
